--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.1075.0",
     "body-parser": "^1.19.2",
     "canvas": "^2.9.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "merge-images": "^2.0.0"
   }
